--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_FBGZLTZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_FBGZLTZ.cshtml
@@ -28,15 +28,15 @@
                 <span class="span_body_nav" id="3">3、<span class="span_body_nav_inner">怎么填写高质量的信息内容--二手</span></span>
             </div>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_1">1.怎么填写高质量的标题<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title" id="div_body_nav_title_1">1.怎么填写高质量的标题</div>
         <div class="div_body_nav_text">
             <span class="span_body_nav_text"></span>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_2">2.怎么填写高质量的信息内容--房产<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title" id="div_body_nav_title_2">2.怎么填写高质量的信息内容--房产</div>
         <div class="div_body_nav_text">
             <span class="span_body_nav_text"></span>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_3">3.怎么填写高质量的信息内容--二手<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title" id="div_body_nav_title_3">3.怎么填写高质量的信息内容--二手</div>
         <div class="div_body_nav_text">
             <span class="span_body_nav_text"></span>
         </div>
@@ -57,5 +57,6 @@
             <span class="span_div_bottom_inner">Copyright&nbsp;©&nbsp;&nbsp;www.infotownlet.com</span>
         </div>
     </div>
+    <div class="div_rtop" id="div_rtop" onClick="GoToTop()"></div>
 </body>
 </html>
