--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_FTBG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_FTBG.cshtml
@@ -33,7 +33,7 @@
                 <span class="span_body_nav" id="6"><span class="span_body_nav_inner">6、车辆市场信息质量标准细则</span></span>
             </div>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_1">1.信息小镇信息质量标准总则<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title" id="div_body_nav_title_1">1.信息小镇信息质量标准总则</div>
         <div class="div_body_nav_text">
             <table>
                 <tr>
@@ -264,7 +264,7 @@
                 </tr>
             </table>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_2">2.本地服务行业信息质量标准细则<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title" id="div_body_nav_title_2">2.本地服务行业信息质量标准细则</div>
         <div class="div_body_nav_text">
             <table>
                 <tr>
@@ -546,7 +546,7 @@
                 </tr>
             </table>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_3">3.招聘行业信息质量标准细则<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title" id="div_body_nav_title_3">3.招聘行业信息质量标准细则</div>
         <div class="div_body_nav_text">
             <table>
                 <tr>
@@ -906,7 +906,7 @@
                 </tr>
             </table>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_4">4.房产行业信息质量标准细则<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title" id="div_body_nav_title_4">4.房产行业信息质量标准细则</div>
         <div class="div_body_nav_text">
             <table>
                 <tr>
@@ -1199,7 +1199,7 @@
                 </tr>
             </table>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_5">5.二手市场信息质量标准细则<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title" id="div_body_nav_title_5">5.二手市场信息质量标准细则</div>
         <div class="div_body_nav_text">
             <table>
                 <tr>
@@ -1545,7 +1545,7 @@
                 </tr>
             </table>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_6">6.车辆市场信息质量标准细则<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title" id="div_body_nav_title_6">6.车辆市场信息质量标准细则</div>
         <div class="div_body_nav_text">
             <table>
                 <tr>
@@ -1854,5 +1854,6 @@
             <span class="span_div_bottom_inner">Copyright&nbsp;©&nbsp;&nbsp;www.infotownlet.com</span>
         </div>
     </div>
+    <div class="div_rtop" id="div_rtop" onClick="GoToTop()"></div>
 </body>
 </html>
