--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_XSSYZN.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_XSSYZN.cshtml
@@ -33,7 +33,7 @@
                 <span class="span_body_nav" id="6"><span class="span_body_nav_inner">6、买家入门</span></span>
             </div>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_1">1.成为注册用户<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title" id="div_body_nav_title_1">1.成为注册用户</div>
         <div class="div_body_nav_text">
             <table>
                 <tr>
@@ -41,7 +41,7 @@
                 </tr>
             </table>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_2">2.如何发布信息<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title" id="div_body_nav_title_2">2.如何发布信息</div>
         <div class="div_body_nav_text">
             <table>
                 <tr>
@@ -49,7 +49,7 @@
                 </tr>
             </table>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_3">3.如何管理信息<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title" id="div_body_nav_title_3">3.如何管理信息</div>
         <div class="div_body_nav_text">
             <table>
                 <tr>
@@ -57,7 +57,7 @@
                 </tr>
             </table>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_4">4.如何查找信息<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title" id="div_body_nav_title_4">4.如何查找信息</div>
         <div class="div_body_nav_text">
             <table>
                 <tr>
@@ -65,7 +65,7 @@
                 </tr>
             </table>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_5">5.信息审核规范<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title" id="div_body_nav_title_5">5.信息审核规范</div>
         <div class="div_body_nav_text">
             <table>
                 <tr>
@@ -565,7 +565,7 @@
                 </tr>
             </table>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_6">6.买家入门<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title" id="div_body_nav_title_6">6.买家入门</div>
         <div class="div_body_nav_text">
 
         </div>
@@ -586,5 +586,6 @@
             <span class="span_div_bottom_inner">Copyright&nbsp;©&nbsp;&nbsp;www.infotownlet.com</span>
         </div>
     </div>
+    <div class="div_rtop" id="div_rtop" onClick="GoToTop()"></div>
 </body>
 </html>
