--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_RZSM.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_RZSM.cshtml
@@ -137,5 +137,6 @@
             <span class="span_div_bottom_inner">Copyright&nbsp;©&nbsp;&nbsp;www.infotownlet.com</span>
         </div>
     </div>
+    <div class="div_rtop" id="div_rtop" onClick="GoToTop()"></div>
 </body>
 </html>
