--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_XXBSC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_XXBSC.cshtml
@@ -91,7 +91,7 @@
             </div>
         </div>
         <div class="div_body_nav_title" id="div_body_nav_title_1">1.房产行业审核信息的原因判定</div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_1_1">1_1.标题内容违规说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_1_1">1_1.标题内容违规说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -134,7 +134,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_1_2">1_2.无意义内容违规说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_1_2">1_2.无意义内容违规说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -231,7 +231,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_1_3">1_3.分类不当违规说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_1_3">1_3.分类不当违规说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -253,7 +253,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_1_4">1_4.图片违规原因说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_1_4">1_4.图片违规原因说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -319,7 +319,7 @@
         </div>
 
         <div class="div_body_nav_title" id="div_body_nav_title_2">2.本地服务行业审核信息的原因判定</div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_2_1">2_1.站内禁止信息说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_2_1">2_1.站内禁止信息说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -570,7 +570,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_2_2">2_2.标题内容违规说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_2_2">2_2.标题内容违规说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -617,7 +617,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_2_3">2_3.图片违规详细说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_2_3">2_3.图片违规详细说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -638,7 +638,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_2_4">2_4.分类不当详细说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_2_4">2_4.分类不当详细说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -719,7 +719,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_2_5">2_5.无意义内容违规说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_2_5">2_5.无意义内容违规说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -746,7 +746,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_2_6">2_6.信息虚假非法说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_2_6">2_6.信息虚假非法说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -831,7 +831,7 @@
         </div>
 
         <div class="div_body_nav_title" id="div_body_nav_title_3">3.招聘行业审核信息的原因判定</div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_3_1">3_1.内容违规说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_3_1">3_1.内容违规说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -922,7 +922,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_3_2">3_2.图片违规说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_3_2">3_2.图片违规说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -950,7 +950,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_3_3">3_3.分类不当说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_3_3">3_3.分类不当说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -981,7 +981,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_3_4">3_4.地址不详说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_3_4">3_4.地址不详说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -1003,7 +1003,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_3_5">3_5.违禁信息说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_3_5">3_5.违禁信息说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -1040,7 +1040,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_3_6">3_6.职位虚假说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_3_6">3_6.职位虚假说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -1117,7 +1117,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_3_7">3_7.薪资虚假说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_3_7">3_7.薪资虚假说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -1139,7 +1139,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_3_8">3_8.涉黄信息说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_3_8">3_8.涉黄信息说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -1161,7 +1161,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_3_9">3_9.虚假信息说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_3_9">3_9.虚假信息说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -1242,7 +1242,7 @@
         </div>
 
         <div class="div_body_nav_title" id="div_body_nav_title_4">4.二手市场审核信息的原因判定</div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_4_1">4_1.图片违规说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_4_1">4_1.图片违规说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -1279,7 +1279,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_4_2">4_2.内容违规说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_4_2">4_2.内容违规说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -1346,7 +1346,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_4_3">4_3.分类不当说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_4_3">4_3.分类不当说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -1368,7 +1368,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_4_4">4_4.价格虚假说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_4_4">4_4.价格虚假说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -1396,7 +1396,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_4_5">4_5.虚假灌水说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_4_5">4_5.虚假灌水说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -1427,7 +1427,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_4_6">4_6.站内禁止信息<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_4_6">4_6.站内禁止信息</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -1509,7 +1509,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_4_7">4_7.信息虚假说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_4_7">4_7.信息虚假说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -1569,7 +1569,7 @@
         </div>
 
         <div class="div_body_nav_title" id="div_body_nav_title_1">5.车辆市场审核信息的原因判定</div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_5_1">5_1.图片违规说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_5_1">5_1.图片违规说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -1610,7 +1610,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_5_2">5_2.分类不当说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_5_2">5_2.分类不当说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -1635,7 +1635,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_5_3">5_3.广告信息说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_5_3">5_3.广告信息说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -1660,7 +1660,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_5_4">5_4.内容违规说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_5_4">5_4.内容违规说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -1685,7 +1685,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_5_5">5_5.价格违禁信息说明<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_5_5">5_5.价格违禁信息说明</div>
         <div class="div_body_nav_text">
             <table>
                 <thead>
@@ -1762,5 +1762,6 @@
             <span class="span_div_bottom_inner">Copyright&nbsp;©&nbsp;&nbsp;www.infotownlet.com</span>
         </div>
     </div>
+    <div class="div_rtop" id="div_rtop" onClick="GoToTop()"></div>
 </body>
 </html>
