--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_ZDJS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_ZDJS.cshtml
@@ -182,9 +182,8 @@
             &nbsp;&nbsp;&nbsp;&nbsp;1、本协议之订立、生效、解释、修订、补充、终止、执行和争议解决均适用中华人民共和国法律。如法律无相关规定的，则应参照通用国际商业惯例和（或）行业惯例。<br />
             &nbsp;&nbsp;&nbsp;&nbsp;2、如本协议条款与国家法律相抵触时，则这些条款将完全按法律规定重新解释，其它条款则依旧保持对双方产生法律效力和影响。<br />
             &nbsp;&nbsp;&nbsp;&nbsp;3、因本协议产生之争议、纠纷，应由信息小镇与您友好协商；协商不成的，应依照中华人民共和国法律予以处理，并以福建省福州市鼓楼区人民法院为第一审管辖法院；按照中华人民共和国法律，因级别管辖的规定，福建省福州市鼓楼区人民法院无权管辖的，以其上级法院作为第一审管辖法院。 <br />
-
-
         </div>
     </div>
+    <div class="div_rtop" id="div_rtop" onClick="GoToTop()"></div>
 </body>
 </html>
