--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_FBGZLTZ.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_FBGZLTZ.css
@@ -269,3 +269,17 @@
     width: 606px;
     height: 387px;
 }
+
+.div_rtop {
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    font-size: small;
+    position: fixed;
+    right: 100px;
+    bottom: 10px;
+    margin: 5px;
+    cursor: pointer;
+    display: none;
+    background-image: url(../images/BZZX/bzzx_fhdb.png);
+}
