--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_KSDH_XSSYZN.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_KSDH_XSSYZN.css
@@ -296,3 +296,17 @@ table {
 .span_red {
     color: red;
 }
+
+.div_rtop {
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    font-size: small;
+    position: fixed;
+    right: 100px;
+    bottom: 10px;
+    margin: 5px;
+    cursor: pointer;
+    display: none;
+    background-image: url(../images/BZZX/bzzx_fhdb.png);
+}
