--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_RZSM.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_RZSM.css
@@ -209,3 +209,17 @@
     margin: 2px 5px 0px 5px;
     display: inline-block;
 }
+
+.div_rtop {
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    font-size: small;
+    position: fixed;
+    right: 100px;
+    bottom: 10px;
+    margin: 5px;
+    cursor: pointer;
+    display: none;
+    background-image: url(../images/BZZX/bzzx_fhdb.png);
+}
