--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_XXBSC.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_XXBSC.css
@@ -303,3 +303,17 @@ td {
     background-image: url(../images/BZZX/bzzx_sy_xxbsc_fhdb.png);
     margin-right: 10px;
 }
+
+.div_rtop {
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    font-size: small;
+    position: fixed;
+    right: 100px;
+    bottom: 10px;
+    margin: 5px;
+    cursor: pointer;
+    display: none;
+    background-image: url(../images/BZZX/bzzx_fhdb.png);
+}
