--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_ZDJS.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_ZDJS.css
@@ -116,3 +116,17 @@
     text-decoration: none;
     color: #ff6100;
 }
+
+.div_rtop {
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    font-size: small;
+    position: fixed;
+    right: 100px;
+    bottom: 10px;
+    margin: 5px;
+    cursor: pointer;
+    display: none;
+    background-image: url(../images/BZZX/bzzx_fhdb.png);
+}
