--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
@@ -86,27 +86,27 @@
                     <td class="td_left_box_bottom_right">
                         <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_cwczyh">成为注册用户</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">如何发布信息</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhfbxx">如何发布信息</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">如何管理信息</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhglxx">如何管理信息</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">如何查找信息</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhczxx">如何查找信息</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">信息审核规范</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xxshgf">信息审核规范</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">买家入门</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_mjrm">买家入门</span>
                     </td>
                 </tr>
                 <tr class="tr_left_box_bottom">
                     <td class="td_left_box_bottom_left">用户注册与登录：</td>
                     <td class="td_left_box_bottom_right">
-                        <span class="span_left_box_bottom_right">用户名修改</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_yhmxg">用户名修改</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">无法登录</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_wfdl">无法登录</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">账户丢失或被盗</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_zhdshbd">账户丢失或被盗</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">账户注销</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_zhzx">账户注销</span>
                     </td>
                 </tr>
                 <tr class="tr_left_box_bottom">
