--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_XSSYZN.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_XSSYZN.cshtml
@@ -210,7 +210,7 @@
                         (25) 国家法律规定适用许可证管理规定而不能提供相关许可证的产品； <br />
                         (26) 根据法律、法规禁止销售或本网站认为依据公共风俗不应贩售的物品,如二手、原味内衣裤、袜。 <br />
                         3、其它限制发布的物品： <br />
-                        (1) 文物： 信息小镇网用户仅可按《中华人民共和国文物保护法》第50条、第51条的规定进行民间收藏文物的买卖；<br />
+                        (1) 文物：信息小镇网用户仅可按《中华人民共和国文物保护法》第50条、第51条的规定进行民间收藏文物的买卖；<br />
                         (2) 动物：信息小镇网用户仅允许销售常见的家禽、家畜、宠物或可食用动物。根据国家有关规定，野生动物、国家保护类动物、濒<br />
                         危动物活体、内脏、任何肢体、皮毛、标本或其他制成品均不能登陆。其中象牙和玳瑁类制品，属于严格禁止登陆的产品。<br />
                         (3) 植物：被列入国家保护类植物清单的、法律禁止不得销售的植物，或植物产品。<br />
@@ -241,97 +241,82 @@
                         违反各版发帖规则的信息。<br />
                         <span class="span_green">处理办法：</span><br />
                         情节较轻的返回修改，情节严重的一律删除信息，并冻结账户。<br />
+                        <span class="span_green">通用：</span><br />
+                        1、信息发布地址与城市不相符的信息将会被删除。<br />
+                        2、信息的标题和内容输入框里不要填写电话号码、QQ号码、邮箱，联系方式请填写在指定区域内。<br />
+                        3、异地发布信息将会被删除。<br />
+                        4、标题与内容、图片不符的信息删除。<br />
+                        5、发布与类别不相符的信息将会被删除<br />
                         <span class="span_green">房屋信息：</span><br />
                         1、只对公司的业务、联系方式进行介绍、展示，却没有对一套房子进行详细介绍的信息将会被删除。<br />
                         2、发布与房产信息无关的信息或图片，如一些装修公司，搬家公司，贷款，招聘等类别错误的信息将会被删除。<br />
-                        3、信息发布地址与城市不相符的信息将会被删除。（如北京的房子发布在广州）<br />
-                        4、一个自然天内，同一套房源被多次发布，将只保留最新的一条！<br />
-                        5、信息的标题和内容输入框里不要填写电话号码、QQ号码、邮箱，联系方式请填写在指定区域内。<br />
-                        6、异地发布信息将会被删除。<br />
-                        7、标题或信息无实质性内容（如关键词堆积、滥用特殊字符等),对浏览者没有任何引导作用的信息，将会被删除返回修改。 <br />
+                        3、一个自然天内，同一套房源被多次发布，将只保留最新的一条！<br />
+                        4、标题或信息无实质性内容（如关键词堆积、滥用特殊字符等),对浏览者没有任何引导作用的信息，将会被删除返回修改。 <br />
                         <span class="span_green">跳蚤市场：</span><br />
-                        1.标题含有电话号码、网站链接、特殊符号的信息会被删除。<br />
-                        2.标题与内容、图片不符的信息删除。<br />
-                        3.标题标点符号只允许使用三个，超过三个的删除。<br />
-                        4.对于图片，文字覆盖在物品上，影响正常参照物品的信息，删除图片。覆盖超过1/3的删除图片，文字和电话不允许覆盖在中间以及穿插在图片中。<br />
-                        5.图片不允许有其他网站的水印。<br />
-                        6.图片上不允许留有联系方式。<br />
-                        7.对商品的描述需要真实有效，对物品要有详细介绍，太笼统的、对公司品牌形象进行介绍的信息视为广告，做删除处理。<br />
-                        8.同一个用户一天内发布多条相同或相似信息，判定为重复信息。从第二条开始删除，只保留一条；（注：相似信息是指发布的信息核心内容为同一事、物，只是对事、物的描述有所变动，则此类信息也判定为重复）<br />
-                        9. 内容里面填写电话为“①③⑤①②③”“一三五一”的信息删除。<br />
-                        10. 内容里包含QQ，MSN等联系方式的，不允许通过。（注意：内容自填电话和联系方式处所填电话不一致的删除，内容里只允许出现用户产品网站的网址，非法网站以及和我们存在竞争关系的网站一律删除）<br />
-                        11. 异地发布删除信息。<br />
-                        12.回收信息发布在黄页类别。<br />
-                        <span class="span_red">13.在跳蚤市场，有些商家为了促成交易，冒充个人进行发帖，这是信息小镇所不允许的，我们近期将对这部分用户进行严厉打击，一经发现，坚决删除信息，情况严重者将永久锁定账户和电话。如果您是商家，请在发布的时候直接选择商家。谢谢您的理解与配合。</span><br />
+                        1、标题含有电话号码、网站链接、特殊符号的信息会被删除。<br />
+                        2、标题标点符号只允许使用三个，超过三个的删除。<br />
+                        3、对于图片，文字覆盖在物品上，影响正常参照物品的信息，删除图片。覆盖超过1/3的删除图片，文字和电话不允许覆盖在中间以及穿插在图片中。<br />
+                        4、图片不允许有其他网站的水印。<br />
+                        5、图片上不允许留有联系方式。<br />
+                        6、对商品的描述需要真实有效，对物品要有详细介绍，太笼统的、对公司品牌形象进行介绍的信息视为广告，做删除处理。<br />
+                        7、同一个用户一天内发布多条相同或相似信息，判定为重复信息。从第二条开始删除，只保留一条；（注：相似信息是指发布的信息核心内容为同一事、物，只是对事、物的描述有所变动，则此类信息也判定为重复）<br />
+                        8、内容里面填写电话为“①③⑤①②③”“一三五一”的信息删除。<br />
+                        9、内容里包含QQ，MSN等联系方式的，不允许通过。（注意：内容自填电话和联系方式处所填电话不一致的删除，内容里只允许出现用户产品网站的网址，非法网站以及和我们存在竞争关系的网站一律删除）<br />
+                        10、回收信息发布在黄页类别。<br />
+                        11、商家为了促成交易，冒充个人进行发帖,一经发现，坚决删除信息，情况严重者将永久锁定账户和电话。如果您是商家，请在发布的时候直接选择商家。<br />
                         <span class="span_green">票务：</span><br />
                         1、发布与类别不相符的信息将会被删除。<br />
-                        2、信息的标题和内容输入框里不要填写电话号码、QQ号码、邮箱，联系方式请填写在指定区域内。<br />
-                        3、发布的物品价格不符合市场正常规律，一旦发现是虚假信息将会被删除。<br />
-                        4、只对公司的业务、联系方式进行介绍、展示，却没有具体的对某一物品进行介绍的信息将会被删除。<br />
-                        5、一个自然天内，同一个账户或电话多次发布同一张（批）票源，将只保留最新的一条！<br />
-                        6、发布高价收购，长期多种票务收购的信息将被删除。<br />
-                        7、发布求购发票，购物小票，报销凭证的信息将被删除。<br />
-                        8、同一条信息里发布多种票务求购的信息将会被删除。<br />
-                        9、请不要发布招商加盟类的信息，否则信息将会被删除或转移到招商加盟类别。<br />
-                        10、异地发布信息将会被删除。<br />
-                        11、标题或信息无实质性内容（如关键词堆积、滥用特殊字符等),对浏览者没有任何引导作用的信息，将会被删除返回修改。<br />
+                        2、发布的物品价格不符合市场正常规律，一旦发现是虚假信息将会被删除。<br />
+                        3、只对公司的业务、联系方式进行介绍、展示，却没有具体的对某一物品进行介绍的信息将会被删除。<br />
+                        4、一个自然天内，同一个账户或电话多次发布同一张（批）票源，将只保留最新的一条！<br />
+                        5、发布高价收购，长期多种票务收购的信息将被删除。<br />
+                        6、发布求购发票，购物小票，报销凭证的信息将被删除。<br />
+                        7、同一条信息里发布多种票务求购的信息将会被删除。<br />
+                        8、标题或信息无实质性内容（如关键词堆积、滥用特殊字符等),对浏览者没有任何引导作用的信息，将会被删除返回修改。<br />
                         <span class="span_green">宠物：</span><br />
                         1、不允许发布任何转让或求购野生动物、国家保护类动物、濒危动物的信息。<br />
                         2、标题和内容中含有电话号码、网站链接、特殊符号、价格的信息会被删除。<br />
-                        3、发布与类别不相符的信息将会被删除。（如在宠物狗里面发布宠物服务等）<br />
-                        4、发布与类别无关的图片将会被删除。<br />
-                        5、文字覆盖在物品上，影响正常参照物品的信息，删除图片。覆盖超过1/3的删除图片，文字和电话不允许在中间和穿插在图片中。<br />
-                        6、图片上不允许留有联系方式，不允许其他网站的水印。<br />
-                        7、与当前类别、信息标题、信息内容不符的图片，以及图片中文字、联系方法影响到正常浏览的图片的信息，删除。<br />
-                        8、一个自然天内，同一个账户或电话多次发布同一个物品或宠物的信息，将只保留最新的一条！<br />
-                        9、请不要发布招商加盟类的信息，否则信息将会被删除或转移到招商加盟类别。<br />
-                        10、异地发布信息将会被删除。<br />
-                        11、标题或信息无实质性内容（如关键词堆积),对浏览者没有任何引导作用的信息，将会被删除返回修改。<br />
-                        12、发现在标题内填写价格变形等恶意竞争的行为，冻结账号7天。<br />
+                        3、发布与类别无关的图片将会被删除。<br />
+                        4、文字覆盖在物品上，影响正常参照物品的信息，删除图片。覆盖超过1/3的删除图片，文字和电话不允许在中间和穿插在图片中。<br />
+                        5、与当前类别、信息标题、信息内容不符的图片，以及图片中文字、联系方法影响到正常浏览的图片的信息，删除。<br />
+                        6、一个自然天内，同一个账户或电话多次发布同一个物品或宠物的信息，将只保留最新的一条！<br />
+                        7、标题或信息无实质性内容（如关键词堆积),对浏览者没有任何引导作用的信息，将会被删除返回修改。<br />
+                        8、发现在标题内填写价格变形等恶意竞争的行为，冻结账号7天。<br />
                         <span class="span_green">车辆买卖与服务：</span><br />
-                        1、发布与类别不相符的信息将会被删除。<br />
-                        2、发布与类别无关的图片将会被删除。（如：把电话号码作为图片发布、发布街景、明星等图片）<br />
-                        3、把文字覆盖在物品图片上导致浏览者根本无法看清物品时，图片会被删除。<br />
-                        4、信息的标题和内容输入框里不要填写电话号码、QQ号码、邮箱，联系方式请填写在指定区域内。<br />
-                        5、发布的物品价格不符合市场正常规律，一旦发现是虚假信息将会被删除。<br />
-                        6、只对公司的业务、联系方式进行介绍、展示，却没有具体的对某一物品进行介绍的信息将会被删除。<br />
-                        7、一个自然天内，同一辆车或物品被多次同城市或跨城市发布，将只保留最新的一条！<br />
-                        8、禁止发布来源不明、海关罚没、不能过户的汽车信息。<br />
-                        9、请不要发布招商加盟类的信息，否则信息将会被删除或转移到招商加盟类别。<br />
-                        10、异地发布信息将会被删除。<br />
-                        11、标题或信息无实质性内容（如关键词堆积、滥用特殊字符等),对浏览者没有任何引导作用的信息，将会被删除返回修改。<br />
-                        <span class="span_green">交友征婚：</span><br />
-                        1、信息的标题或内容输入框里不要填写电话号码、QQ号码、邮箱，否则将会被删除。联系方式请您填写在指定区域内。<br />
-                        2、信息的标题或内容输入框里不要填写任何网址，否则信息将会被删除。<br />
-                        3、在征婚和异性交友里发布非真人图片，图片将会被删除。<br />
-                        4、发布与类别毫无关系的图片或在图片上留下联系方式，图片将会被删除。<br />
-                        5、出现文字、图片动作不雅或疑似色情服务的信息一律删除<br />
-                        6、所留QQ号的个人资料以及QQ空间中如有色情服务信息的，一律删除。<br />
+                        1、发布与类别无关的图片将会被删除。（如：把电话号码作为图片发布、发布街景、明星等图片）<br />
+                        2、把文字覆盖在物品图片上导致浏览者根本无法看清物品时，图片会被删除。<br />
+                        3、发布的物品价格不符合市场正常规律，一旦发现是虚假信息将会被删除。<br />
+                        4、只对公司的业务、联系方式进行介绍、展示，却没有具体的对某一物品进行介绍的信息将会被删除。<br />
+                        5、一个自然天内，同一辆车或物品被多次同城市或跨城市发布，将只保留最新的一条！<br />
+                        6、禁止发布来源不明、海关罚没、不能过户的汽车信息。<br />
                         7、标题或信息无实质性内容（如关键词堆积、滥用特殊字符等),对浏览者没有任何引导作用的信息，将会被删除返回修改。<br />
+                        <span class="span_green">交友征婚：</span><br />
+                        1、信息的标题或内容输入框里不要填写任何网址，否则信息将会被删除。<br />
+                        2、在征婚和异性交友里发布非真人图片，图片将会被删除。<br />
+                        3、发布与类别毫无关系的图片或在图片上留下联系方式，图片将会被删除。<br />
+                        4、出现文字、图片动作不雅或疑似色情服务的信息一律删除<br />
+                        5、所留QQ号的个人资料以及QQ空间中如有色情服务信息的，一律删除。<br />
+                        6、标题或信息无实质性内容（如关键词堆积、滥用特殊字符等),对浏览者没有任何引导作用的信息，将会被删除返回修改。<br />
                         <span class="span_green">黄页： </span><br />
                         1、标题和内容带特殊符号的，将会被删除。<br />
-                        2、发布与类别不相符的信息，将会被删除。<br />
-                        3、发布与类别无关的图片将会被删除。（如：把电话号码作为图片发布、发布风景、明星等图片）<br />
-                        4、把文字覆盖在物品图片上导致浏览者根本无法看清物品时，图片会被删除。<br />
-                        5、信息的标题和内容输入框里不要填写电话号码、QQ号码、邮箱，联系方式请填写在指定区域内。<br />
-                        6、同一张图片被连续多次重复发布时，图片将会被删除，情节严重者将删除信息。<br />
-                        7、部分类别异地发布信息将会被删除。<br />
-                        8、标题或信息无实质性内容（如关键词堆积、滥用特殊字符等),对浏览者没有任何引导作用的信息，将会被删除返回修改。<br />
-                        <span class="span_red">9、使用信息小镇代言人宣传图片和带有“信息小镇推荐”等字样图片的信息，将会被删除。</span><br />
-                        <span class="span_red">10、信息标题含有“信息小镇推荐”等词语的，将会被删除。</span><br />
+                        2、发布与类别无关的图片将会被删除。（如：把电话号码作为图片发布、发布风景、明星等图片）<br />
+                        3、把文字覆盖在物品图片上导致浏览者根本无法看清物品时，图片会被删除。<br />
+                        4、同一张图片被连续多次重复发布时，图片将会被删除，情节严重者将删除信息。<br />
+                        5、标题或信息无实质性内容（如关键词堆积、滥用特殊字符等),对浏览者没有任何引导作用的信息，将会被删除返回修改。<br />
+                        9、使用信息小镇代言人宣传图片和带有“信息小镇推荐”等字样图片的信息，将会被删除。<br />
+                        10、信息标题含有“信息小镇推荐”等词语的，将会被删除。<br />
                         <span class="span_green">招聘： </span><br />
                         1、标题、内容含有QQ、手机号等联系方式的信息都将删除。<br />
-                        2、发布与类别不相符的信息会被删除。<br />
-                        3、招聘内容或图片含有色情服务内容的信息会被删除。<br />
-                        4、公司资料乱写，公司资料与招聘信息严重不相符的信息会被删除。<br />
-                        5、一个自然天内，同一职位多次发布，将只保留最新的一条。<br />
-                        6、一个自然天内，异地发布最多只可选择1个城市，超过会被删除。<br />
-                        7、被用户投诉收费、扣押身份证等，删除信息和公司资料，并锁定账户。<br />
-                        8、冒用名企招聘，删除信息和公司资料，并锁定账户。<br />
-                        9、招聘职位薪资不符合市场正常规律，一旦发现是虚假信息将会被删除。<br />
-                        10、不允许发布“打字录入”类招聘职位，否则删除。<br />
-                        11、标题或信息无实质性内容（如关键词堆积、滥用特殊字符等),对浏览者没有任何引导作用的信息，将会被删除返回修改。<br />
-                        12、禁止发布淘宝刷钻信息，凡发布淘宝刷钻信息者，将被冻结账户、信息删除处理。<br />
+                        2、招聘内容或图片含有色情服务内容的信息会被删除。<br />
+                        3、公司资料乱写，公司资料与招聘信息严重不相符的信息会被删除。<br />
+                        4、一个自然天内，同一职位多次发布，将只保留最新的一条。<br />
+                        5、一个自然天内，异地发布最多只可选择1个城市，超过会被删除。<br />
+                        6、被用户投诉收费、扣押身份证等，删除信息和公司资料，并锁定账户。<br />
+                        7、冒用名企招聘，删除信息和公司资料，并锁定账户。<br />
+                        8、招聘职位薪资不符合市场正常规律，一旦发现是虚假信息将会被删除。<br />
+                        9、不允许发布“打字录入”类招聘职位，否则删除。<br />
+                        10、标题或信息无实质性内容（如关键词堆积、滥用特殊字符等),对浏览者没有任何引导作用的信息，将会被删除返回修改。<br />
+                        11、禁止发布淘宝刷钻信息，凡发布淘宝刷钻信息者，将被冻结账户、信息删除处理。<br />
                     </td>
                 </tr>
                 <tr>
@@ -345,7 +330,8 @@
                         1. 不得发布虚假的房源图片（与内部图片或本套房源不一致的房源图，装修情况不一致），否则将做房源下架处理。<br />
                         2. "不得在图片上加盖任何竞品水印（包括但不仅限于其他网站logo，网址，100%、真房源、佣金等广告字样），否则将做房源下架处理。<br />
                         3. 对于非竞品中介公司名称和logo，要求白色、透明、所占图片面积小于25%三个条件必须同时满足，否则将做房源下架处理。<br />
-                        4. 对于非竞品中介公司名称+宣传语——房源下架处理。"                                                5. 不得发布模糊、失真的房源图片（遮挡、拼接、马赛克、翻转等），否则将做房源下架处理。<br />
+                        4. 对于非竞品中介公司名称+宣传语——房源下架处理。<br />                                                
+                        5. 不得发布模糊、失真的房源图片（遮挡、拼接、马赛克、翻转等），否则将做房源下架处理。<br />
                         6. 不得在房源描述中插入图片（包括网站logo，头像等），否则将做房源下架处理<br />
                         7. 上传的室内图大小限制在100K-10M之间，图片长或宽皆不得小于720px，否则将无法上传。<br />
                         8. 不得上传gif格式或者其他格式的动态图，否则将做房源下架处理。<br />
@@ -448,7 +434,7 @@
                 </tr>
                 <tr>
                     <td colspan="2" class="td_content">
-                        用户反馈（客服电话或与58对话）信息被误判，经过客服部门核实后，将信息进行恢复操作。<br />
+                        用户反馈（客服电话）信息被误判，经过客服部门核实后，将信息进行恢复操作。<br />
                         信息恢复后，同时返还被扣除的相应信用、积分数。 <br />
                     </td>
                 </tr>
@@ -469,13 +455,13 @@
                 </tr>
                 <tr>
                     <td colspan="2" class="td_content">
-                        所有58用户的身份只有两种：个人、中介。
+                        所有信息小镇用户的身份只有两种：个人、中介。
                         <span class="span_green">中介：</span>
-                        信息被58客服人员确认为中介后，判为中介信息，同时账户与电话也被记录为中介。<br />
+                        信息被信息小镇客服人员确认为中介后，判为中介信息，同时账户与电话也被记录为中介。<br />
                         用户只能将个人身份改成中介身份，无权将中介身份改成个人身份。<br />
                         如发现中介冒充个人的行为，将会严惩！<br />
                         <span class="span_green">申请身份更改：</span>
-                        如信息发布人的职业和行为发生变化，可以通过与58对话申请恢复个人身份。申请恢复必须从判为中介之日起3个月后才能申请。<br />
+                        如信息发布人的职业和行为发生变化，可以通过与信息小镇客服申请恢复个人身份。申请恢复必须从判为中介之日起3个月后才能申请。<br />
                     </td>
                 </tr>
                 <tr>
@@ -502,7 +488,7 @@
                 </tr>
                 <tr>
                     <td colspan="2" class="td_content">
-                        应该根据用户的基本情况，发布的信息情况、出发点，对58的用户体验、信息质量伤害程度，按照我们的规定进行处罚。<br />
+                        应该根据用户的基本情况，发布的信息情况、出发点，对信息小镇的用户体验、信息质量伤害程度，按照我们的规定进行处罚。<br />
                         对于一些根据本规定可以从重处理或者从轻处理可行情况下，应当在相关条款规定限度以内进行从轻处理。主观上刻意逃避规则的，应当从重处罚。
                     </td>
                 </tr>
@@ -544,7 +530,7 @@
                 </tr>
                 <tr>
                     <td colspan="2" class="td_content">
-                        1、账户、IP、手机冻结是指限制它们在规定时间内在58的合法使用权。在冻结期间可以浏览帖子，但不能发布信息和评论。 只有在严重违反《58信息质量控制规定》的情况下才会产生冻结。<br />
+                        1、账户、IP、手机冻结是指限制它们在规定时间内在信息小镇的合法使用权。在冻结期间可以浏览帖子，但不能发布信息和评论。 只有在严重违反《信息小镇信息质量控制规定》的情况下才会产生冻结。<br />
                         2、同一账户或同一手机在一个自然天内发布的多条信息中，只变动对同一事、物的描述或根本没有任何变动的信息，一律删除。一个自然天内同一张图片用来发布多条信息，保留最新发布的一张，其他图片删除。<br />
                         3、同一用户注册多个账户在一个或多个城市发布大量相同性质的信息，则视为灌水信息。<br />
                         4、内容自填电话和联系方式处所填电话不一致的删除，内容里只允许出现用户产品网站的网址，非法网站以及和我们存在竞争关系的网站一律删除。<br />
