信息发布与删除

--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
@@ -112,15 +112,15 @@
                 <tr class="tr_left_box_bottom">
                     <td class="td_left_box_bottom_left">信息发布与删除：</td>
                     <td class="td_left_box_bottom_right">
-                        <span class="span_left_box_bottom_right">信息在列表不显示</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xxzlbbxs">信息在列表不显示</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">提示信息相似或重复</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_tsxxxshcf">提示信息相似或重复</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">信息无法发布</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xxwffb">信息无法发布</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">信息被删除</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xxbsc">信息被删除</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">如何修改/删除信息 </span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhxgscxx">如何修改/删除信息 </span>
                     </td>
                 </tr>
                 <tr class="tr_left_box_bottom">
