--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_YHZCYDL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_YHZCYDL.cshtml
@@ -25,10 +25,6 @@
             <div class="div_body_nav_inner">
                 <span class="span_body_nav" id="1"><span class="span_body_nav_inner">1、用户名修改</span></span>
                 <span class="span_body_nav" id="2"><span class="span_body_nav_inner">2、无法登录</span></span>
-                <span class="span_body_nav" id="3"><span class="span_body_nav_inner">3、账户丢失或被盗</span></span>
-            </div>
-            <div class="div_body_nav_inner">
-                <span class="span_body_nav" id="4"><span class="span_body_nav_inner">4、账户注销</span></span>
             </div>
         </div>
         <div class="div_body_nav_title" id="div_body_nav_title_1">1.用户名修改</div>
@@ -47,9 +43,9 @@
                         用户不能登录网站的原因有以下几种可能：<br />
                         1、登录时输入的"用户名或邮件"、"密码"有错误，这种情况请检查用户名和密码，也可以“找回密码”，重试登录<br />
                         2、信用值为“<span class="span_red">0</span>”时，不允许登录网站。在信息小镇进行了非法操作，一旦查实，信用值即被降为0。<br />
-                        （1）分类信息被删除，信用-1<br />
-                        （2）举报被确认为非法，信用-1<br />
-                        （3）评论被删除，信用-1<br />
+                        （1）分类信息被删除，信用<span class="span_red">-1</span><br />
+                        （2）举报被确认为非法，信用<span class="span_red">-1</span><br />
+                        （3）评论被删除，信用<span class="span_red">-1</span><br />
                         3、您的浏览器没有开启cookie，无法登录！<br />
                         <span class="span_bold">如何启用cookie？</span><br />
                         启用cookies,请根据您的浏览器版本按以下说明操作。<br />
@@ -62,22 +58,6 @@
                         <span class="span_bold">Microsoft Internet Explorer 5.x</span><br />
                         在工具菜单上单击“Internet选项” 单击“安全”选项卡 单击所需的 Web 内容区域，然后单击“自定义级别” 在 Cookie 下 在“允许使用存储在您计算机上的 Cookie”下单击要使用的选项，单击“确定” 在“允许使用每个对话 Cookie(未存储)”下单击所需的选项，单击“确定”。<br />
                     </td>
-                </tr>
-            </table>
-        </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_3">3.账户丢失或被盗</div>
-        <div class="div_body_nav_text">
-            <table>
-                <tr>
-                    <td colspan="2" class="td_content">登录信息小镇后，点击我的中心，在我的信息中即可管理信息。 </td>
-                </tr>
-            </table>
-        </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_4">4.账户注销</div>
-        <div class="div_body_nav_text">
-            <table>
-                <tr>
-                    <td colspan="2" class="td_content">选择分类，搜索关键字，对查找的信息进行筛选 </td>
                 </tr>
             </table>
         </div>
