--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
@@ -126,17 +126,17 @@
                 <tr class="tr_left_box_bottom">
                     <td class="td_left_box_bottom_left">认证与取消认证：</td>
                     <td class="td_left_box_bottom_right">
-                        <span class="span_left_box_bottom_right">认证中心</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rzzx">认证中心</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">如何认证</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhrz">如何认证</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">更换认证</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_ghrz">更换认证</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">收不到认证码</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_sbdrzm">收不到认证码</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">收不到认证邮件</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_sbdrzyj">收不到认证邮件</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">更多认证问题</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_gdrzwt">更多认证问题</span>
                     </td>
                 </tr>
                 <tr class="tr_left_box_bottom">
