--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_RZSM.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_RZSM.cshtml
@@ -50,10 +50,10 @@
         <div class="div_body_nav_text"><span class="span_body_nav_img"></span></div>
         <div class="div_body_nav_text">
             3、每成功认证一项资料后，您的账户将会获得一枚认证图标。认证图标将会显示在您的个人主页、发布的信息页等地方。<br />
-            <span class="span_body_nav_text">通过邮箱验证后获得</span><span class="span_body_nav_img span_body_nav_img_yxrz"></span><br />
-            <span class="span_body_nav_text">通过手机验证后获得</span><span class="span_body_nav_img span_body_nav_img_sjrz"></span><br />
-            <span class="span_body_nav_text">通过实名（身份证）验证后获得</span><span class="span_body_nav_img span_body_nav_img_smrz"></span><br />
-            <span class="span_body_nav_text">通过营业执照验证后获得</span><span class="span_body_nav_img span_body_nav_img_yyzzrz"></span><br />
+            <span class="span_body_nav_text">&nbsp;&nbsp;&nbsp;通过邮箱验证后获得</span><span class="span_body_nav_img span_body_nav_img_yxrz"></span><br />
+            <span class="span_body_nav_text">&nbsp;&nbsp;&nbsp;通过手机验证后获得</span><span class="span_body_nav_img span_body_nav_img_sjrz"></span><br />
+            <span class="span_body_nav_text">&nbsp;&nbsp;&nbsp;通过实名（身份证）验证后获得</span><span class="span_body_nav_img span_body_nav_img_smrz"></span><br />
+            <span class="span_body_nav_text">&nbsp;&nbsp;&nbsp;通过营业执照验证后获得</span><span class="span_body_nav_img span_body_nav_img_yyzzrz"></span><br />
         </div>
         <div class="div_body_nav_title" id="div_body_nav_title_3">3.一项资料可以在多少个账户里进行认证？</div>
         <div class="div_body_nav_text">
@@ -109,16 +109,16 @@
         </div>
         <div class="div_body_nav_title" id="div_body_nav_title_12">12.进行个人身份认证有哪些好处？</div>
         <div class="div_body_nav_text">
-            1、可以用来自助恢复被误判成中介/商家的信息。
-            2、通过认证后在各个类别发帖都为个人身份。
-            3、在部分类别可以获得更好的流量。
+            1、可以用来自助恢复被误判成中介/商家的信息。<br />
+            2、通过认证后在各个类别发帖都为个人身份。<br />
+            3、在部分类别可以获得更好的流量。<br />
         </div>
         <div class="div_body_nav_title" id="div_body_nav_title_13">13.为什么我申请的个人身份认证没有通过审核？</div>
         <div class="div_body_nav_text">
-            1、如用户提供的资料可以证实用户为：房产经纪人、保险行业、职介、二手商家、黄页商家。那么申请不会通过。
-            2、已验证过营业执照的账户无法通过个人身份认证。
-            3、微博认证只支持橙V认证，公司/企业/机构的蓝V无法通过个人身份认证。
-            4、如证实用户确有在某一个类别存在大量发帖的经营行为，那么申请将无法通过。
+            1、如用户提供的资料可以证实用户为：房产经纪人、保险行业、职介、二手商家、黄页商家。那么申请不会通过。<br />
+            2、已验证过营业执照的账户无法通过个人身份认证。<br />
+            3、微博认证只支持橙V认证，公司/企业/机构的蓝V无法通过个人身份认证。<br />
+            4、如证实用户确有在某一个类别存在大量发帖的经营行为，那么申请将无法通过。<br />
         </div>
     </div>
     <div class="div_bottom">
