--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
@@ -140,25 +140,15 @@
                     </td>
                 </tr>
                 <tr class="tr_left_box_bottom">
-                    <td class="td_left_box_bottom_left">置顶/余额/刷新：</td>
-                    <td class="td_left_box_bottom_right">
-                        <span class="span_left_box_bottom_right">置顶服务</span>
-                        <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">余额充值操作步骤</span>
-                        <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">刷新介绍</span>
-                    </td>
-                </tr>
-                <tr class="tr_left_box_bottom">
                     <td class="td_left_box_bottom_left">账户等级与信用：</td>
                     <td class="td_left_box_bottom_right">
-                        <span class="span_left_box_bottom_right">什么是信用</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_smsxy">什么是信用</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">信用的增加与减少</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xydzjyjs">信用的增加与减少</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">等级与发帖量</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_djyftl">等级与发帖量</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">同一条信息更新次数</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_tytxxgxcs">同一条信息更新次数</span>
                     </td>
                 </tr>
                 <tr class="tr_left_box_bottom">
