--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_KSDH_ZHDJYXY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_KSDH_ZHDJYXY.css
@@ -292,7 +292,8 @@ table {
         border: 1px solid #000 !important;
         width: 270px;
         text-align: left;
-        padding-left: 20px;
+        padding-left: 10px;
+        padding-right: 10px;
     }
 
 
