--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
@@ -154,19 +154,19 @@
                 <tr class="tr_left_box_bottom">
                     <td class="td_left_box_bottom_left">网络防骗常识：</td>
                     <td class="td_left_box_bottom_right">
-                        <span class="span_left_box_bottom_right">拼车防骗</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_pcfp">拼车防骗</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">网络招聘防骗</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_wlzpfp">网络招聘防骗</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">网警防骗</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_wjfp">网警防骗</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">宠物防骗</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_cwfp">宠物防骗</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">二手交易防骗</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_esjyfp">二手交易防骗</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">房产防骗</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_fcfp">房产防骗</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">火车票防骗</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_hcpfp">火车票防骗</span>
                     </td>
                 </tr>
                 <tr class="tr_left_box_bottom">
